--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "삼청교육대"
+title                    : "대전 3반 삼청교육대-박한범"
 title_separator          : "-"
 name                     : "Your Name"
 description              : "한 줄 소개"
