--- a/_data/navagation.yml
+++ b/_data/navagation.yml
@@ -1,3 +1,3 @@
 main:
   title: about us
-  url: https://hanbeom-park.github.io/ssafy_test/public
+  url: https://gitpitch.com/hanbeom-park/ssafy_test
