--- a/_data/navagation.yml
+++ b/_data/navagation.yml
@@ -1,3 +1,3 @@
 main:
-  title: about us
-  url: https://gitpitch.com/hanbeom-park/ssafy_test
+  -title: about us
+   url: https://gitpitch.com/hanbeom-park/ssafy_test
